--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,36 +2,37 @@
 {
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
 }
 
 header
 {
   width: 100%;
   height: 5vw;
-  background-color: azure;
-  display: flex;
 }
 
 .logo
 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 5vw;
+  float: left;
 }
 
+.logo img
+{
+  width: 45%;
+  margin-left: 5vw;
+  height: 5vw;
+  margin-top: 1vw;
+}
 
 nav
 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: 60%;
+  float: right;
 }
 
 nav ul li
 {
   display: inline-block;
+  margin-top: 2vw;
 }
 
 nav ul li a
@@ -48,13 +49,52 @@ nav ul li a
   margin-top: 5vw;
 }
 
-.container p
+.container .contenu img
 {
-  width: 50%;
-  margin-left: 25%;
+  width: 90%;
 }
 
-table
+.container .contenu
+{
+  width: 45%;
+  display: inline-block;
+}
+
+.container .contenu .txt hr
+{
+  width: 35%;
+  height: 3px;
+  background-color: black;
+  border-radius: 5px;
+  margin-left: 32%;
+  margin-top: 10px;
+}
+
+.container .contenu .txt p
+{
+  width: 90%;
+  margin-left: 5%;
+}
+
+.container .contenu .txt button
+{
+  margin-top: 2vw;
+  width: 30%;
+  height: 3vw;
+  background-color: blue;
+  color: white;
+  border: 0;
+  border-radius: 10px;
+}
+
+.container .line
+{
+  width: 20%;
+  margin-left: 40%;
+  margin-top: 1vw;
+}
+
+.container table
 {
   width: 70%;
   margin-left: 15%;
@@ -69,25 +109,53 @@ table th
 
 table td
 {
+  padding: 8px;
+}
+
+.del
+{
+  background-color: red;
+  color: white;
+  border: 0;
+  border-radius: 5px;
+}
+
+.modif
+{
+  background-color: rgb(12, 39, 146);
+  border: 0;
+  border-radius: 5px;
+}
+
+.modif a
+{
+  color: white;
+}
+
+.container table button
+{
   padding: 5px;
+  font-weight: bold;
+
 }
 
 .container table a
 {
   text-decoration: none;
   color: black;
+  font-weight: bold;
 }
 
 
 .container .btn-add
 {
-  width:15%;
-  height: 3vw;
+  width:10%;
+  height: 2.5vw;
   border: 0;
-  background-color: blue;
+  background-color: rgb(12, 39, 146);
   margin-top: 5vw;
   margin-bottom: 2vw;
-  margin-left: 44%;
+  margin-left: 60%;
 }
 
 .container .btn-add a
@@ -95,4 +163,25 @@ table td
   text-decoration: none;
   color: white;
   font-size: 15px;
+  padding: 40px;
+}
+
+.container .stat
+{
+  width: 25%;
+  text-align: start;
+  margin-left: 15%;
+  box-shadow: black 2px 2px 2px 0px;
+}
+
+.container .affichage hr
+{
+  width: 70%;
+  margin-left: 15%;
+}
+
+.container .stat span
+{
+  font-size: 25px;
+  color: blue;
 }
